--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="text-primary pl-2">MEDICO</span>
   </a>
   <div class="collapse navbar-collapse justify-content-end">
-    <ul class="navbar-nav d-flex mt-2 mt-lg-0 text-white">
+    <ul class="navbar-nav d-flex mt-2 mt-lg-0 text-white pr-5">
       <li class="nav-item" [routerLinkActive]="'active'">
         <a class="nav-link" [routerLink]="'/home'">Inicio <span class="sr-only">(current)</span></a>
       </li>
