--- a/src/app/patient/detail/detail.component.html
+++ b/src/app/patient/detail/detail.component.html
@@ -6,8 +6,8 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img *ngIf="!patient?.photo" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-              <img *ngIf="patient?.photo" [src]="patient.photo" alt="photo" class="rounded-circle" width="150">
+              <img *ngIf="!patient?.photo" src="./assets/img/patient_01.svg" alt="Admin" class="rounded-circle" width="80">
+              <img *ngIf="patient?.photo" [src]="patient.photo" alt="photo" class="rounded-circle" width="80">
               <div class="mt-3">
                 <h4>{{patient?.name + ' ' + patient?.lastName}}</h4>
                 <p class="text-muted font-size-sm">{{patient?.birthday | date:'dd-MM-yyyy'}}</p>
@@ -18,9 +18,9 @@
         </div>
       </div>
       <div class="col-md-8 d-flex h-100">
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="row">
+        <div class="card mb-3 w-100">
+          <div class="card-body" *ngIf="!medicalRecordSelected">
+            <div class="d-flex">
               <h6 class="mb-0">Historial de consultas</h6>
             </div>
             <hr>
@@ -34,7 +34,40 @@
               [page]="utils.page"
               [pageSize]="utils.pageSize"
             ></app-table-list>
+          </div>
+          <div class="card-body w-100" *ngIf="medicalRecordSelected">
+            <div class="d-flex justify-content-between">
+              <h6 class="mb-0">Detalle de consulta medica</h6>
+              <img class="height-19px cursor-pointer" src="./assets/img/close.svg" alt="cerrar" (click)="closeDetail()">
+            </div>
+            <hr>
+            <div class="w-100 d-flex flex-row">
+              <div class="col-5">
 
+                <div class="">
+                  <h6>Datos del doctor:</h6>
+                  <p class="text-secondary mb-1">Nombre: {{medicalRecordSelected.doctor?.name + ' ' + medicalRecordSelected.doctor?.lastName}}</p>
+                  <p class="text-secondary mb-1">Especialidad:{{medicalRecordSelected.doctor?.speciality}}</p>
+                  <p class="text-secondary mb-1">Dirección:{{medicalRecordSelected.doctor?.address}}</p>
+                </div>
+                <hr>
+                <div>
+                  <h6>Indicaciones:</h6>
+                  <p class="text-secondary mb-1">* {{medicalRecordSelected.prescriptionDrug}}</p>
+                </div>
+              </div>
+              <div class="col-7">
+                <app-table-list *ngIf="medicalRecordSelected"
+                                [columnList]="utils.columnPrescription"
+                                [dataList]="prescriptionList"
+                                [dataListAux]="prescriptionList"
+                                [searchPlaceholder]=""
+                                [collectionSize]="total"
+                                [page]="utils.page"
+                                [pageSize]="utils.pageSize"
+                ></app-table-list>
+              </div>
+            </div>
           </div>
         </div>
       </div>
